# heat_exchanger

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: check.yml
analysis/: RInvolute_Design_Ver07_Outboard.py  angle_sweep_eps_ntu.py  comp_withZeli_involute_cases.py  correlation_plots.py  counterflow.py  fluid_protocols_testing.py  fluid_testing.py  fprotocols_testing.py  interactive_involute_geometry.py  involute_hx_study.py  oneD_counterflow.py  plot_ahjeb_toc_temperatures.py  radial_inv_eps_ntu.py  reaction_viper.py  recup_model_ahje_rect.py  recup_model_brewer.py  recuperator_modelling.py  solve_involute_cases.py  solve_involute_viper.py  spiral_involute_v_archimedian.py  spiral_v_involute.py
analysis/fluid_files/: fluid_testing.py
analysis/standalone_tools/: correlation_plots.py  interactive_involute_geometry.py  interactive_radial_spiral_geometry.py  spiral_v_involute.py
docs/: 0Dmodel.md  eps_ntu.md  geometry.md  index.md
docs/javascripts/: mathjax.js
src/heat_exchanger/: __init__.py  conservation.py  correlations  correlations.py  epsilon_ntu.py  fluid_properties.py  geometry_tube_bank.py  hex_basic.py  involute_inboard.py  logging_utils.py  rect_tube_bank.py  rect_tube_bank_GTP5.py  tube_bank_straight.py
src/heat_exchanger/fluids/: protocols.py
src/heat_exchanger/geometries/: radial_spiral.py
tests/: test_conservation.py  test_correlation.py
