[project]
name = "heat-exchanger"
version = "0.1.0"
description = "Heat exchanger model for first order evaluating and designing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coolprop>=7.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.4"]
docs = ["mkdocs-bibtex>=4.4.0", "mkdocs-material>=9.6.15"]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pycodestyle
    "SIM", # flake8-simplify
    "T",   # pycodestyle
    "UP",  # pyupgrade
]
ignore = [
    "E501",
    "N802",  # Allow function names with capital letters
    "N803",  # Allow argument names with capital letters
    "N806",  # Allow variable names in functions with capital letters
    "UP038", # allow isinstance(var, (int, float)) rather than requiring isinstance(var, int | float)
]

[tool.ruff.lint.per-file-ignores]
# Ignore `T201` (print statements) in all `analysis/*.py` files.
"analysis/*.py" = ["T201"]


[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
